finish join,invite to challgen